--- a/LDCC-84-3/app/build.gradle
+++ b/LDCC-84-3/app/build.gradle
@@ -90,12 +90,6 @@ dependencies {
     compile "io.grpc:grpc-protobuf-lite:$grpcVersion"
     compile "io.grpc:grpc-stub:$grpcVersion"
     // FlexboxLayout
-    compile    'com.android.support:appcompat-v7:25.0.1'
-    compile    'javax.annotation:javax.annotation-api:1.2'
-    compile    'com.google.android:flexbox:0.2.6'
-    compile    'com.android.support.constraint:constraint-layout:+'
-    compile 'com.google.android.gms:play-services-maps:11.0.2'
-    protobuf 'com.google.protobuf:protobuf-java:3.3.1'
     
 
     // Dependencies for Google API Client Libraries
@@ -120,6 +114,14 @@ dependencies {
     'com.android.support:appcompat-v7:25.0.1'compile
     'javax.annotation:javax.annotation-api:1.2'compile
     'com.google.android:flexbox:0.2.6'compile
-    'com.android.support.constraint:constraint-layout:+'protobuf
+    'com.android.support.constraint:constraint-final_result:+'protobuf
 'com.google.protobuf:protobuf-java:3.3.1'*/
+compile    'com.android.support:appcompat-v7:25.0.1'
+    compile 'javax.annotation:javax.annotation-api:1.2'
+    compile 'com.google.android:flexbox:0.2.6'
+    compile 'com.android.support.constraint:constraint-layout:+'
+    compile 'com.google.android.gms:play-services-maps:11.0.2'
+    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:recyclerview-v7:25.3.1'
+    protobuf 'com.google.protobuf:protobuf-java:3.3.1'
 }
