UI 개선작업, 크래시 문제 1차 해결, 2차 발발 해결중

--- a/LDCC-84-3/app/src/main/AndroidManifest.xml
+++ b/LDCC-84-3/app/src/main/AndroidManifest.xml
@@ -48,7 +48,10 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps"></activity>
+            android:label="@string/title_activity_maps" />
+        <activity
+            android:name=".MapsActivity12"
+            android:label="@string/title_activity_maps12"></activity>
     </application>
 
 </manifest>
